# evalsense

./: .pre-commit-config  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  OPEN_CODE_CHECKLIST.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-pages.yml  evalsense.yml  guide.yml  llmscope.yml  release.yml
docs/: index.md
docs/api-reference/: datasets.md  utils.md
docs/api-reference/LLMs/: base.md  managers.md
docs/api-reference/datasets/: base.md  managers.md
docs/api-reference/evaluation/: base.md  evaluators.md
docs/api-reference/generation/: base.md
docs/api-reference/pipelines/: base.md
docs/api-reference/prompts/: base.md
docs/api-reference/tasks/: base.md
docs/api-reference/utils/: base.md
docs/api-reference/webui/: base.md  configurators.md
docs/api-reference/workflow/: analysers.md  base.md
docs/stylesheets/: extra.css
evalsense/: constants.py
evalsense/cli/: main.py
evalsense/datasets/: __init__.py  dataset_manager.py
evalsense/datasets/managers/: aci_bench.py  huggingface.py
evalsense/evaluation/: __init__.py  experiment.py
evalsense/evaluation/evaluators/: bertscore.py  g_eval.py
evalsense/webui/: app.py  execution.py  state.py  utils.py
evalsense/webui/components/: data.py  execution.py  generation.py  models.py  results.py  utils.py
evalsense/webui/configurators/: __init__.py  evaluator_configurator.py
evalsense/workflow/: project.py
evalsense/workflow/analysers/: meta_result_analyser.py  metric_correlation_analyser.py
guide/: README.md  docusaurus.config.ts  eslint.config.mjs  package-lock.json  package.json  sidebars.ts
guide/docs/: intro.md
guide/src/css/: custom.css
guide/src/data/: categories.json  methods.json  presets.json  qualities.json  questionnaire.json  risks.json  tasks.json
guide/src/pages/: catalogue.tsx  guide.tsx  index.tsx  presets.tsx
guide/src/theme/: Root.tsx
guide/src/types/: evaluation.types.ts
guide/src/utils/: dataLoaders.ts  evaluationLogic.ts  localStorage.ts
llmscope/: __init__.py  columns.py  constants.py  logging.py
llmscope/cli/: __main__.py  datasets.py  main.py
llmscope/dataset_config/: ACI-BENCH.yml
llmscope/datasets/: __init__.py  dataset_config.py  dataset_manager.py  remote_file.py
llmscope/evaluation/: __init__.py  evaluation_result.py  evaluator.py  experiment.py  prompt_template.py  result_aggregator.py
llmscope/generation/: __init__.py  generation_steps.py  model_config.py
llmscope/llms/: __init__.py  llm_manager.py
llmscope/pipelines/: __init__.py  pipeline.py
llmscope/prompts/: __init__.py  prompt_formatter.py
llmscope/tasks/: __init__.py  task_preprocessor.py
llmscope/utils/: dict.py  evaluation.py  files.py  text.py
llmscope/workflow/: __init__.py  pipeline.py  project.py  result_analyser.py
notebooks/: Demo.ipynb  Experiments.ipynb  Meta-Evaluation.ipynb  Test.ipynb  test_pipeline.py
scripts/: check_version.py  update_changelog.py
src/llmscope/: cli.py
(+49 files in other folders)
