[project]
name = "llmscope"
version = "0.1.0"
description = "Tools for evaluating large language models on healthcare tasks."
readme = "README.md"
authors = [
    { name = "Adam Dejl", email = "adam.dejl18@imperial.ac.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.4.0",
    "datasets>=3.2.0",
    "evaluate>=0.4.3",
    "flashinfer-python<0.2.3",
    "inspect-ai>=0.3.85",
    "matplotlib>=3.10.0",
    "numpy<2.0.0",
    "openai>=1.65.3",
    "pandas>=2.2.3",
    "platformdirs>=4.3.6",
    "polars>=1.22.0",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
    "tenacity>=9.0.0",
    "torch>=2.6",
    "tqdm>=4.67.1",
    "transformers>=4.50.0",
    "typer>=0.15.1",
    "vllm>=0.8.2",
]

[project.optional-dependencies]
interactive = [
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.5",
]

[project.scripts]
llmscope = "llmscope.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.3",
    "mkdocstrings[python]>=0.28.0",
    "objgraph>=3.6.2",
    "pre-commit>=4.1.0",
    "pre-commit-hooks>=5.0.0",
    "ruff>=0.9.5",
]

[tool.ruff]
line-length = 88
